--- a/src/components/Sidenav/sidenav.css
+++ b/src/components/Sidenav/sidenav.css
@@ -3,3 +3,47 @@
     background-color: #546e7a;
     color: #fff;
 }
+
+.user-section {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #445862;
+}
+
+.user-section > * {
+    margin-left: 10px;
+}
+
+.username {
+    font-size: 16px;
+}
+
+.settings {
+    color: #90a2aa;
+    position: relative;
+}
+
+.settings span {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-20%);
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    padding: 10px;
+    margin: 10px;border-radius: 4px;
+    cursor: pointer;
+}
+li:hover {
+    background-color: rgba(168, 238, 250, 0.19);
+}
+
+.active {
+    background-color: rgba(168, 238, 250, 0.19);
+}
